# Alpha-Nex-NEW

./: .env.example  .replit  DEBUG_REPORT.md  DEPLOYMENT.md  Procfile  app.py  cookies.txt  external_requirements.txt  forms.py  gunicorn.conf.py  main.py  models.py  openai_service.py  pyproject.toml  replit.md  replit_auth.py  routes.py  routes_old.py  utils.py  utils_motivation.py
attached_assets/: Pasted-You-are-an-expert-debugging-assistant-working-inside-Replit-Your-job-is-to-1-Analyze-my-app-s-so-1753471813929_1753471813945.txt
instance/: alphanex.db
static/css/: style.css
static/js/: main.js
templates/: 403.html  404.html  500.html  add.html  base.html  dashboard.html  error.html  index.html  name_entry.html  profile.html  rating.html  view.html
templates/admin/: panel.html
templates/auth/: login.html  signup.html
templates/reviewer/: review.html  review_upload.html
templates/uploader/: upload.html
uploads/: .gitkeep
